--- a/kiley-wilhelm.html
+++ b/kiley-wilhelm.html
@@ -69,7 +69,7 @@
         <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
         <li><span>Minor</span><span class="meta-value">Economics</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GGPA</span><span class="meta-value">3.95</span></li>
+        <li><span>GPA</span><span class="meta-value">3.95</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
         <li><span>Hometown</span><span class="meta-value">Charlotte, NC</span></li>
       </ul>
