--- a/catherine-ruf.html
+++ b/catherine-ruf.html
@@ -7,154 +7,43 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
 
-  .prospect-hero {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem 1.25rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin:0 0 .25rem;text-transform:uppercase;}
+  .prospect-tagline {margin:0 0 .15rem;font-size:1rem;font-weight:600;}
+  .prospect-subtitle {margin:0;font-size:.9rem;opacity:.9;}
 
-  .prospect-hero-main {
-    flex: 1 1 60%;
-    max-width: 70%;
-    min-width: 260px;
-  }
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;background:rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label{font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score{font-family:'Archivo Black';font-size:2.2rem;margin:.15rem 0;}
+  .grade-tier{font-size:.9rem;font-weight:600;}
 
-  .prospect-grade-card {
-    flex: 0 0 200px;
-    width: 200px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
+  /* REC PILL */
+  .recommendation-pill{
+    display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;
   }
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-yellow{background:#eab308;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  /* META */
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-tagline {
-    margin: 0 0 0.18rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.45;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
+  /* SECTIONS */
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list li{font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
 </head>
 
@@ -163,111 +52,101 @@
 
   <!-- HERO -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">CATHERINE RUF</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Player-Coach Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Columbia University · Rowing 🚣 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Catherine Ruf</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Columbia University · Rowing · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">93</div>
-      <div class="grade-tier">Round 1–2 Candidate</div>
-      <div class="grade-note">Reliable, steady, and culture-positive contributor</div>
+      <div class="grade-tier">Round 1-2</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <span>Strong Recommendation</span>
+      </div>
     </div>
   </section>
 
+
   <!-- META -->
   <section class="prospect-meta">
-
-    <!-- LEFT: PROSPECT INFO -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span>College</span><span class="meta-value">Columbia University</span></li>
+        <li><span>School</span><span class="meta-value">Columbia University</span></li>
         <li><span>Major</span><span class="meta-value">Financial Economics</span></li>
         <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.5</span></li>
-        <li><span>Sport</span><span class="meta-value">Rowing 🚣</span></li>
+        <li><span>Sport</span><span class="meta-value">Rowing</span></li>
         <li><span>Hometown</span><span class="meta-value">Greenwich, CT</span></li>
       </ul>
     </div>
 
-    <!-- RIGHT: MAP PROFILE -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1380.5</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">9 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">4 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">9 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            9. Player-Coach<br>
-            (Principled Personality · Team Stewardship · Process Organization)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Take One for the Team<br>
-            (Servant Leader · Service Orientation · Team-First Mindset)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">9 / 29</span></li>
+        <li><span>Interview #1</span><span class="meta-value">87.1%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">95.7%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">95.0%</span></li>
+        <li><span>Personality</span><span class="meta-value">Player-Coach (Principled, Process-Oriented)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Servant Leader (Service-Oriented, Team-First)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Detail-Oriented (Precise, Quality-Focused)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- OVERVIEW -->
+
+  <!-- CONTENT -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Catherine is one of the most reliable and steady contributors in the Diamond League class — a classic
-      <strong>Player-Coach archetype</strong> who quietly raises the floor for every group she’s in. She submits work on time,
-      keeps it clean and client-ready, and approaches each assignment with a professional, no-drama mindset that firms
-      consistently value in early analyst classes.
-      <br><br>
-      With a Financial Economics foundation, Division I rowing, and exposure to private equity and investment banking
-      environments, she brings a mature, structured approach to both her work and her teams — more substance than flash,
-      but impressively consistent across the board.
+      Catherine is one of the most reliable and steady contributors in the Diamond League class — a classic Player-Coach 
+      archetype who quietly raises the floor for every group she’s in. She submits work on time, keeps it clean and 
+      client-ready, and approaches each assignment with a professional, no-drama mindset that firms consistently value in 
+      early analyst classes.<br><br>
+      With a Financial Economics foundation, Division I rowing, and exposure to private equity and investment banking 
+      environments, she brings a mature, structured approach to both her work and her teams — more substance than flash, but 
+      impressively consistent across the board.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Exceptionally consistent operator:</strong> Delivers on-time, polished assignments that are close to client-ready without heavy editing.</li>
-      <li><strong>Player-Coach wiring:</strong> Leads through standards, example, and organization rather than volume — the type teammates naturally trust.</li>
-      <li><strong>Professional polish:</strong> Comfortable in structured, high-expectation environments (PE internship, IB exposure, long-term family assistant role).</li>
-      <li><strong>Competitive athletic résumé:</strong> High-level rowing background with meaningful leadership and responsibility experience.</li>
-      <li><strong>Dependable teammate:</strong> Shows up prepared, steady, and aligned with expectations — low-maintenance, high-trust profile.</li>
+      <li>Exceptionally consistent operator: on-time, polished, client-ready work.</li>
+      <li>Player-Coach wiring — leads through standards, example & organization.</li>
+      <li>Professional polish — PE internship, IB exposure, high-trust responsibilities.</li>
+      <li>Competitive rowing résumé with leadership & accountability experience.</li>
+      <li>Dependable teammate — prepared, steady, aligned with expectations.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue sharpening technical fluency (valuation frameworks, modeling reps) to fully match her consistency and work ethic.</li>
-      <li>Look for early moments to be more vocal in case settings, not just in execution — her judgment is strong enough to drive the discussion.</li>
-      <li>Keep turning rich experiences (Henley, PE sector work, FSYC leadership) into tight, memorable interview stories.</li>
+      <li>Continue sharpening valuation + modeling fluency to match execution.</li>
+      <li>Step into more vocal moments in case settings — instincts are strong.</li>
+      <li>Convert experiences into tight, memorable interview story arcs.</li>
     </ul>
   </section>
 
-  <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Catherine projects as a <strong>Round 1–2 MAP prospect</strong> with a very high consistency floor and strong culture fit.
-      She’s the kind of Player-Coach profile that quietly stabilizes an analyst class — dependable, mature, and coachable —
-      and with continued technical reps she can evolve into a highly trusted, go-to execution analyst on a deal team.
+      Catherine projects as a Round 1–2 MAP prospect with a high consistency floor and strong culture fit. She’s the kind of 
+      Player-Coach profile that quietly stabilizes an analyst class — dependable, mature, coachable — and with continued 
+      technical reps she can evolve into a highly trusted, go-to execution analyst on a deal team.
     </p>
   </section>
 
 </div>
 </body>
 </html>
+
